--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -5,10 +5,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:scrollbars="vertical"
     >
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <include layout="@layout/frame_layout" />
-
-    <include layout="@layout/linear_layout" />
+            <include layout="@layout/frame_layout" />
+            <include layout="@layout/linear_layout" />
+            <include layout="@layout/relative_layout" />
+            <include layout="@layout/table_layout" />
+            <include layout="@layout/flex_layout" />
+            <include layout="@layout/constraint_layout" />
+            <!--<include layout="@layout/flex_layout" />-->
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
