--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -19,6 +19,10 @@
 
         <include layout="@layout/table_layout" />
 
+        <include layout="@layout/flexbox_layout" />
+
+        <include layout="@layout/constraint_layout" />
+
     </LinearLayout>
 
 </ScrollView>
