add flex box layout

--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -20,5 +20,7 @@
 
         <include layout="@layout/constraint_layout" />
 
+        <include layout="@layout/flex_layout" />
+
     </LinearLayout>
 </ScrollView>
