--- a/app/src/main/res/layout/constraint_layout.xml
+++ b/app/src/main/res/layout/constraint_layout.xml
@@ -12,8 +12,8 @@
         style="@style/Item.00"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
+        tools:layout_editor_absoluteX="496dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
         android:id="@+id/item.01"
@@ -21,7 +21,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
 
-        tools:layout_editor_absoluteX="96dp"
+        tools:layout_editor_absoluteX="592dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
@@ -29,8 +29,8 @@
         style="@style/Item.02"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        app:layout_constraintLeft_toRightOf="@+id/item.01"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
+        tools:layout_editor_absoluteX="688dp"
+        tools:layout_editor_absoluteY="0dp" />
 
 
     <ImageView
@@ -40,7 +40,7 @@
         android:layout_height="96dp"
 
 
-        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
+        tools:layout_editor_absoluteX="496dp"
         app:layout_constraintTop_toBottomOf="@+id/item.00" />
 
     <ImageView
