--- a/app/src/main/res/layout/constraint_layout.xml
+++ b/app/src/main/res/layout/constraint_layout.xml
@@ -10,52 +10,51 @@
     <ImageView
         android:id="@+id/item.00"
         style="@style/Item.00"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        tools:layout_editor_absoluteX="496dp"
+        android:layout_width="@dimen/item_size"
+        android:layout_height="@dimen/item_size"
+        app:layout_constraintRight_toLeftOf="@+id/item.01"
         tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
         android:id="@+id/item.01"
         style="@style/Item.01"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-
-        tools:layout_editor_absoluteX="592dp"
+        android:layout_width="@dimen/item_size"
+        android:layout_height="@dimen/item_size"
+        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
+        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
         tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
         android:id="@+id/item.02"
         style="@style/Item.02"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        tools:layout_editor_absoluteX="688dp"
+        android:layout_width="@dimen/item_size"
+        android:layout_height="@dimen/item_size"
+        app:layout_constraintLeft_toRightOf="@+id/item.01"
         tools:layout_editor_absoluteY="0dp" />
 
 
     <ImageView
         android:id="@+id/item.10"
         style="@style/Item.10"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-
-
-        tools:layout_editor_absoluteX="496dp"
+        android:layout_width="@dimen/item_size"
+        android:layout_height="@dimen/item_size"
+        app:layout_constraintRight_toLeftOf="@+id/item.11"
         app:layout_constraintTop_toBottomOf="@+id/item.00" />
 
     <ImageView
         android:id="@+id/item.11"
         style="@style/Item.11"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        app:layout_constraintLeft_toRightOf="@+id/item.10"
+        android:layout_width="@dimen/item_size"
+        android:layout_height="@dimen/item_size"
+        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
+        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
         app:layout_constraintTop_toBottomOf="@+id/item.01" />
 
     <ImageView
         android:id="@+id/item.12"
         style="@style/Item.12"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="@dimen/item_size"
+        android:layout_height="@dimen/item_size"
         app:layout_constraintLeft_toRightOf="@+id/item.11"
         app:layout_constraintTop_toBottomOf="@+id/item.02" />
 </android.support.constraint.ConstraintLayout>
