--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -7,16 +7,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <include layout="@layout/linear_layout" />
 
         <include layout="@layout/frame_layout" />
 
         <include layout="@layout/relative_layout" />
 
-        <include layout="@layout/linear_layout" />
+        <include layout="@layout/table_layout" />
 
         <include layout="@layout/constraint_layout" />
+
+        <include layout="@layout/flexbox_layout" />
+
+
     </LinearLayout>
 
 </ScrollView>
