--- a/app/src/main/res/layout/frame_layout.xml
+++ b/app/src/main/res/layout/frame_layout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
     tools:ignore="ContentDescription,RtlHardcoded">
 
     <ImageView style="@style/Item.00"/>
