--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="half_item_size">48dp</dimen>
     <dimen name="item_size">96dp</dimen>
     <dimen name="double_item_size">192dp</dimen>
 
