--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -19,5 +19,7 @@
         <include layout="@layout/table_layout" />
 
         <include layout="@layout/constraint_layout" />
+
+        <include layout="@layout/flexbox_layout" />
     </LinearLayout>
 </ScrollView>
