--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    >
+    android:layout_height="wrap_content">
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        >
 
-    <include layout="@layout/frame_layout" />
+        <include layout="@layout/frame_layout" />
 
-    <include layout="@layout/linear_layout" />
+        <include layout="@layout/linear_layout" />
 
-</LinearLayout>
+        <include layout="@layout/relative_layout" />
+
+        <include layout="@layout/table_layout" />
+
+        <include layout="@layout/constraint_layout" />
+
+        <include layout="@layout/flexbox_layout" />
+
+    </LinearLayout>
+</ScrollView>
