--- a/app/src/main/res/layout/table_fragment_layout.xml
+++ b/app/src/main/res/layout/table_fragment_layout.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ru.yandex.yamblz.performance.LinearLayoutExt
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:tag="fragment_content"
+    android:tag="table_fragment_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     >
 
-    <include layout="@layout/frame_layout" />
-    <include layout="@layout/linear_layout" />
     <include layout="@layout/table_layout" />
-    <include layout="@layout/relative_layout" />
-    <include layout="@layout/constraint_layout" />
+
+    <include layout="@layout/table_layout" />
 
 </ru.yandex.yamblz.performance.LinearLayoutExt>
