--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -16,6 +16,8 @@
 
         <include layout="@layout/relative_layout"/>
 
+        <include layout="@layout/table_layout"/>
+
     </LinearLayout>
 
 </ScrollView>
