--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -10,16 +10,24 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
+        <!-- Measure | Layout | Draw [ms] -->
+
+        <!-- 0.035   | 0.017  | 0.900     -->
         <include layout="@layout/frame_layout"/>
 
+        <!-- 0.045   | 0.022  | 0.804     -->
         <include layout="@layout/linear_layout"/>
 
+        <!-- 0.060   | 0.010  | 0.739     -->
         <include layout="@layout/relative_layout"/>
 
+        <!-- 0.077   | 0.026  | 0.716     -->
         <include layout="@layout/table_layout"/>
 
+        <!-- 0.552   | 0.018  | 0.816     -->
         <include layout="@layout/constraint_layout"/>
 
+        <!-- 0.121   | 0.023  | 0.723     -->
         <include layout="@layout/flexbox_layout"/>
 
     </LinearLayout>
