--- a/app/src/main/res/layout/flexbox_layout.xml
+++ b/app/src/main/res/layout/flexbox_layout.xml
@@ -2,17 +2,22 @@
 <com.google.android.flexbox.FlexboxLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="288dp"
+    android:layout_height="wrap_content"
     app:justifyContent="center"
     app:flexWrap="wrap"
+    app:alignContent="center"
     app:alignItems="flex_start"
-    app:alignContent="flex_start" >
+    app:flexDirection="row"
+    android:focusable="false">
 
     <ImageView
         style="@style/Item.00"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false" />
 
     <ImageView
         style="@style/Item.01"
