--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
-    >
+    android:orientation="vertical">
 
     <include layout="@layout/frame_layout" />
 
+    <include layout="@layout/relative_layout" />
+
     <include layout="@layout/linear_layout" />
+
+    <include layout="@layout/table_layout" />
+
+    <include layout="@layout/constraint_layout" />
+
+    <include layout="@layout/flex_layout" />
 
 </LinearLayout>
