--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -18,5 +18,7 @@
 
         <include layout="@layout/table_layout" />
 
+        <include layout="@layout/constraint_layout" />
+
     </LinearLayout>
 </ScrollView>
