--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -10,15 +10,41 @@
         android:gravity="center_horizontal"
         >
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="frame layout"/>
         <include layout="@layout/frame_layout" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="linear layout"/>
         <include layout="@layout/linear_layout" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="relative layout"/>
         <include layout="@layout/relative_layout" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="table layout"/>
         <include layout="@layout/table_layout" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="constraint layout"/>
         <include layout="@layout/constraint_layout" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="flexbox layout"/>
+        <include layout="@layout/flex_layout" />
 
     </LinearLayout>
 </ScrollView>
